<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_language">

        <Preference
            app:icon="@drawable/ic_language_48"
            app:key="@string/key_language"
            app:summary="@string/summary_language"
            app:title="@string/title_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_notification">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_notification_48"
            app:key="@string/key_notification_pref"
            app:summaryOff="@string/summary_off_notification_pref"
            app:summaryOn="@string/summary_on_notification_pref"
            app:title="@string/title_notification_pref" />

    </PreferenceCategory>

</PreferenceScreen>