<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/setting_title"
        app:showAsAction="ifRoom" />
</menu>